# serializer version: 1
# name: test_converter_with_fixture[albums/own_series.json]
  dict({
    'album_type': 'unknown',
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '68461151',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': None,
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': None,
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': '',
        'position': None,
        'provider': 'nicovideo_test',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '68461151',
            'provider_domain': 'nicovideo',
            'provider_instance': 'nicovideo_test',
            'url': 'https://www.nicovideo.jp/user/68461151',
          }),
        ]),
        'sort_name': '',
        'translation_key': None,
        'uri': 'nicovideo_test://artist/68461151',
        'version': '',
      }),
    ]),
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '527007',
    'media_type': 'album',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': None,
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/series/527007',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'テストシリーズ68461151-527007',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '527007',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/series/527007',
      }),
    ]),
    'sort_name': 'テストシリース68461151-527007',
    'translation_key': None,
    'uri': 'nicovideo_test://album/527007',
    'version': '',
    'year': None,
  })
# ---
# name: test_converter_with_fixture[albums/single_series_details.json]
  dict({
    'album': dict({
      'album_type': 'unknown',
      'artists': list([
        dict({
          'date_added': None,
          'external_ids': list([
          ]),
          'favorite': False,
          'is_playable': True,
          'item_id': '68461151',
          'media_type': 'artist',
          'metadata': dict({
            'chapters': None,
            'copyright': None,
            'description': None,
            'explicit': None,
            'genres': None,
            'grouping': None,
            'images': None,
            'label': None,
            'languages': None,
            'last_refresh': None,
            'links': None,
            'lrc_lyrics': None,
            'lyrics': None,
            'mood': None,
            'performers': None,
            'popularity': None,
            'preview': None,
            'release_date': None,
            'review': None,
            'style': None,
          }),
          'name': 'ゲスト',
          'position': None,
          'provider': 'nicovideo_test',
          'provider_mappings': list([
            dict({
              'audio_format': dict({
                'bit_depth': 16,
                'bit_rate': 0,
                'channels': 2,
                'codec_type': '?',
                'content_type': '?',
                'output_format_str': '?',
                'sample_rate': 44100,
              }),
              'available': True,
              'details': None,
              'in_library': None,
              'is_unique': None,
              'item_id': '68461151',
              'provider_domain': 'nicovideo',
              'provider_instance': 'nicovideo_test',
              'url': 'https://www.nicovideo.jp/user/68461151',
            }),
          ]),
          'sort_name': 'ケスト',
          'translation_key': None,
          'uri': 'nicovideo_test://artist/68461151',
          'version': '',
        }),
      ]),
      'date_added': None,
      'external_ids': list([
      ]),
      'favorite': False,
      'is_playable': True,
      'item_id': '527007',
      'media_type': 'album',
      'metadata': dict({
        'chapters': None,
        'copyright': None,
        'description': 'This is a dummy description for testing purposes.',
        'explicit': None,
        'genres': None,
        'grouping': None,
        'images': None,
        'label': None,
        'languages': None,
        'last_refresh': None,
        'links': list([
          dict({
            'type': 'website',
            'url': 'https://www.nicovideo.jp/series/527007',
          }),
        ]),
        'lrc_lyrics': None,
        'lyrics': None,
        'mood': None,
        'performers': None,
        'popularity': None,
        'preview': None,
        'release_date': None,
        'review': None,
        'style': None,
      }),
      'name': 'テストシリーズ68461151-527007',
      'position': None,
      'provider': 'nicovideo_test',
      'provider_mappings': list([
        dict({
          'audio_format': dict({
            'bit_depth': 16,
            'bit_rate': 0,
            'channels': 2,
            'codec_type': '?',
            'content_type': '?',
            'output_format_str': '?',
            'sample_rate': 44100,
          }),
          'available': True,
          'details': None,
          'in_library': None,
          'is_unique': None,
          'item_id': '527007',
          'provider_domain': 'nicovideo',
          'provider_instance': 'nicovideo_test',
          'url': 'https://www.nicovideo.jp/series/527007',
        }),
      ]),
      'sort_name': 'テストシリース68461151-527007',
      'translation_key': None,
      'uri': 'nicovideo_test://album/527007',
      'version': '',
      'year': None,
    }),
    'tracks': list([
      dict({
        'album': None,
        'artists': list([
          dict({
            'date_added': None,
            'external_ids': list([
            ]),
            'favorite': False,
            'is_playable': True,
            'item_id': '68461151',
            'media_type': 'artist',
            'metadata': dict({
              'chapters': None,
              'copyright': None,
              'description': None,
              'explicit': None,
              'genres': None,
              'grouping': None,
              'images': list([
                dict({
                  'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
                  'provider': 'nicovideo_test',
                  'remotely_accessible': True,
                  'type': 'thumb',
                }),
              ]),
              'label': None,
              'languages': None,
              'last_refresh': None,
              'links': list([
                dict({
                  'type': 'website',
                  'url': 'https://www.nicovideo.jp/user/68461151',
                }),
              ]),
              'lrc_lyrics': None,
              'lyrics': None,
              'mood': None,
              'performers': None,
              'popularity': None,
              'preview': None,
              'release_date': None,
              'review': None,
              'style': None,
            }),
            'name': 'ゲスト',
            'position': None,
            'provider': 'nicovideo_test',
            'provider_mappings': list([
              dict({
                'audio_format': dict({
                  'bit_depth': 16,
                  'bit_rate': 0,
                  'channels': 2,
                  'codec_type': '?',
                  'content_type': '?',
                  'output_format_str': '?',
                  'sample_rate': 44100,
                }),
                'available': True,
                'details': None,
                'in_library': None,
                'is_unique': None,
                'item_id': '68461151',
                'provider_domain': 'nicovideo',
                'provider_instance': 'nicovideo_test',
                'url': 'https://www.nicovideo.jp/user/68461151',
              }),
            ]),
            'sort_name': 'ケスト',
            'translation_key': None,
            'uri': 'nicovideo_test://artist/68461151',
            'version': '',
          }),
        ]),
        'date_added': None,
        'disc_number': 0,
        'duration': 2,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': 'sm45285955',
        'last_played': 0,
        'media_type': 'track',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': 'This is a dummy description for testing purposes.',
          'explicit': False,
          'genres': None,
          'grouping': None,
          'images': list([
            dict({
              'path': 'https://img.cdn.nimg.jp/s/nicovideo/thumbnails/45285955/45285955.27227006.original/r640x360l?key=7098d92a9c12d0b14101a4c3c8297e04c6e7a59eb59ffe9e71c88fa0181b0cb5',
              'provider': 'nicovideo_test',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
            dict({
              'path': 'https://nicovideo.cdn.nimg.jp/thumbnails/45285955/45285955.27227006.L',
              'provider': 'nicovideo_test',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
          ]),
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': list([
            dict({
              'type': 'website',
              'url': 'https://www.nicovideo.jp/watch/sm45285955',
            }),
          ]),
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': 0,
          'preview': None,
          'release_date': '2025-01-01T00:00:00+09:00',
          'review': None,
          'style': None,
        }),
        'name': 'APIテスト用',
        'position': None,
        'provider': 'nicovideo_test',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': 'aac',
              'content_type': 'mp4',
              'output_format_str': 'mp4',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': 'sm45285955',
            'provider_domain': 'nicovideo',
            'provider_instance': 'nicovideo_test',
            'url': 'https://www.nicovideo.jp/watch/sm45285955',
          }),
        ]),
        'sort_name': 'apiテスト用',
        'track_number': 0,
        'translation_key': None,
        'uri': 'nicovideo_test://track/sm45285955',
        'version': '',
      }),
    ]),
  })
# ---
# name: test_converter_with_fixture[albums/user_series.json]
  dict({
    'album_type': 'unknown',
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '68461151',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': None,
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': None,
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': '',
        'position': None,
        'provider': 'nicovideo_test',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '68461151',
            'provider_domain': 'nicovideo',
            'provider_instance': 'nicovideo_test',
            'url': 'https://www.nicovideo.jp/user/68461151',
          }),
        ]),
        'sort_name': '',
        'translation_key': None,
        'uri': 'nicovideo_test://artist/68461151',
        'version': '',
      }),
    ]),
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '527007',
    'media_type': 'album',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': None,
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/series/527007',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'テストシリーズ68461151-527007',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '527007',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/series/527007',
      }),
    ]),
    'sort_name': 'テストシリース68461151-527007',
    'translation_key': None,
    'uri': 'nicovideo_test://album/527007',
    'version': '',
    'year': None,
  })
# ---
# name: test_converter_with_fixture[artists/following_users.json]
  dict({
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '4',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/user/4',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': '中の',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '4',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/user/4',
      }),
    ]),
    'sort_name': '中の',
    'translation_key': None,
    'uri': 'nicovideo_test://artist/4',
    'version': '',
  })
# ---
# name: test_converter_with_fixture[artists/user_details.json]
  dict({
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '68461151',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/user/68461151',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'ゲスト',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '68461151',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/user/68461151',
      }),
    ]),
    'sort_name': 'ケスト',
    'translation_key': None,
    'uri': 'nicovideo_test://artist/68461151',
    'version': '',
  })
# ---
# name: test_converter_with_fixture[history/user_history.json]
  dict({
    'album': None,
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '68461151',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': list([
            dict({
              'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
              'provider': 'nicovideo_test',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
          ]),
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': list([
            dict({
              'type': 'website',
              'url': 'https://www.nicovideo.jp/user/68461151',
            }),
          ]),
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': 'ゲスト',
        'position': None,
        'provider': 'nicovideo_test',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '68461151',
            'provider_domain': 'nicovideo',
            'provider_instance': 'nicovideo_test',
            'url': 'https://www.nicovideo.jp/user/68461151',
          }),
        ]),
        'sort_name': 'ケスト',
        'translation_key': None,
        'uri': 'nicovideo_test://artist/68461151',
        'version': '',
      }),
    ]),
    'date_added': None,
    'disc_number': 0,
    'duration': 2,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': 'sm45285955',
    'last_played': 0,
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': False,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://img.cdn.nimg.jp/s/nicovideo/thumbnails/45285955/45285955.27227006.original/r640x360l?key=7098d92a9c12d0b14101a4c3c8297e04c6e7a59eb59ffe9e71c88fa0181b0cb5',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
        dict({
          'path': 'https://nicovideo.cdn.nimg.jp/thumbnails/45285955/45285955.27227006.L',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/watch/sm45285955',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': 0,
      'preview': None,
      'release_date': '2025-01-01T00:00:00+09:00',
      'review': None,
      'style': None,
    }),
    'name': 'APIテスト用',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': 'aac',
          'content_type': 'mp4',
          'output_format_str': 'mp4',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': 'sm45285955',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/watch/sm45285955',
      }),
    ]),
    'sort_name': 'apiテスト用',
    'track_number': 0,
    'translation_key': None,
    'uri': 'nicovideo_test://track/sm45285955',
    'version': '',
  })
# ---
# name: test_converter_with_fixture[history/user_likes.json]
  dict({
    'album': None,
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '68461151',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': list([
            dict({
              'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
              'provider': 'nicovideo_test',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
          ]),
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': list([
            dict({
              'type': 'website',
              'url': 'https://www.nicovideo.jp/user/68461151',
            }),
          ]),
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': 'ゲスト',
        'position': None,
        'provider': 'nicovideo_test',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '68461151',
            'provider_domain': 'nicovideo',
            'provider_instance': 'nicovideo_test',
            'url': 'https://www.nicovideo.jp/user/68461151',
          }),
        ]),
        'sort_name': 'ケスト',
        'translation_key': None,
        'uri': 'nicovideo_test://artist/68461151',
        'version': '',
      }),
    ]),
    'date_added': None,
    'disc_number': 0,
    'duration': 2,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': 'sm45285955',
    'last_played': 0,
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': False,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://img.cdn.nimg.jp/s/nicovideo/thumbnails/45285955/45285955.27227006.original/r640x360l?key=7098d92a9c12d0b14101a4c3c8297e04c6e7a59eb59ffe9e71c88fa0181b0cb5',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
        dict({
          'path': 'https://nicovideo.cdn.nimg.jp/thumbnails/45285955/45285955.27227006.L',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/watch/sm45285955',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': 0,
      'preview': None,
      'release_date': '2025-01-01T00:00:00+09:00',
      'review': None,
      'style': None,
    }),
    'name': 'APIテスト用',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': 'aac',
          'content_type': 'mp4',
          'output_format_str': 'mp4',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': 'sm45285955',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/watch/sm45285955',
      }),
    ]),
    'sort_name': 'apiテスト用',
    'track_number': 0,
    'translation_key': None,
    'uri': 'nicovideo_test://track/sm45285955',
    'version': '',
  })
# ---
# name: test_converter_with_fixture[playlists/following_mylists.json]
  dict({
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_editable': False,
    'is_playable': True,
    'item_id': '78597499',
    'media_type': 'playlist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/mylist/78597499',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'テストマイリスト68461151-78597499',
    'owner': '68461151',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '78597499',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/mylist/78597499',
      }),
    ]),
    'sort_name': 'テストマイリスト68461151-78597499',
    'translation_key': None,
    'uri': 'nicovideo_test://playlist/78597499',
    'version': '',
  })
# ---
# name: test_converter_with_fixture[playlists/own_mylists.json]
  dict({
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_editable': True,
    'is_playable': True,
    'item_id': '78597499',
    'media_type': 'playlist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/mylist/78597499',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'テストマイリスト68461151-78597499',
    'owner': '68461151',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '78597499',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/mylist/78597499',
      }),
    ]),
    'sort_name': 'テストマイリスト68461151-78597499',
    'translation_key': None,
    'uri': 'nicovideo_test://playlist/78597499',
    'version': '',
  })
# ---
# name: test_converter_with_fixture[playlists/single_mylist_details.json]
  dict({
    'playlist': dict({
      'date_added': None,
      'external_ids': list([
      ]),
      'favorite': False,
      'is_editable': True,
      'is_playable': True,
      'item_id': '78597499',
      'media_type': 'playlist',
      'metadata': dict({
        'chapters': None,
        'copyright': None,
        'description': 'This is a dummy description for testing purposes.',
        'explicit': None,
        'genres': None,
        'grouping': None,
        'images': list([
          dict({
            'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
            'provider': 'nicovideo_test',
            'remotely_accessible': True,
            'type': 'thumb',
          }),
        ]),
        'label': None,
        'languages': None,
        'last_refresh': None,
        'links': list([
          dict({
            'type': 'website',
            'url': 'https://www.nicovideo.jp/mylist/78597499',
          }),
        ]),
        'lrc_lyrics': None,
        'lyrics': None,
        'mood': None,
        'performers': None,
        'popularity': None,
        'preview': None,
        'release_date': None,
        'review': None,
        'style': None,
      }),
      'name': 'テストマイリスト68461151-78597499',
      'owner': '68461151',
      'position': None,
      'provider': 'nicovideo_test',
      'provider_mappings': list([
        dict({
          'audio_format': dict({
            'bit_depth': 16,
            'bit_rate': 0,
            'channels': 2,
            'codec_type': '?',
            'content_type': '?',
            'output_format_str': '?',
            'sample_rate': 44100,
          }),
          'available': True,
          'details': None,
          'in_library': None,
          'is_unique': None,
          'item_id': '78597499',
          'provider_domain': 'nicovideo',
          'provider_instance': 'nicovideo_test',
          'url': 'https://www.nicovideo.jp/mylist/78597499',
        }),
      ]),
      'sort_name': 'テストマイリスト68461151-78597499',
      'translation_key': None,
      'uri': 'nicovideo_test://playlist/78597499',
      'version': '',
    }),
    'tracks': list([
      dict({
        'album': None,
        'artists': list([
          dict({
            'date_added': None,
            'external_ids': list([
            ]),
            'favorite': False,
            'is_playable': True,
            'item_id': '68461151',
            'media_type': 'artist',
            'metadata': dict({
              'chapters': None,
              'copyright': None,
              'description': None,
              'explicit': None,
              'genres': None,
              'grouping': None,
              'images': list([
                dict({
                  'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
                  'provider': 'nicovideo_test',
                  'remotely_accessible': True,
                  'type': 'thumb',
                }),
              ]),
              'label': None,
              'languages': None,
              'last_refresh': None,
              'links': list([
                dict({
                  'type': 'website',
                  'url': 'https://www.nicovideo.jp/user/68461151',
                }),
              ]),
              'lrc_lyrics': None,
              'lyrics': None,
              'mood': None,
              'performers': None,
              'popularity': None,
              'preview': None,
              'release_date': None,
              'review': None,
              'style': None,
            }),
            'name': 'ゲスト',
            'position': None,
            'provider': 'nicovideo_test',
            'provider_mappings': list([
              dict({
                'audio_format': dict({
                  'bit_depth': 16,
                  'bit_rate': 0,
                  'channels': 2,
                  'codec_type': '?',
                  'content_type': '?',
                  'output_format_str': '?',
                  'sample_rate': 44100,
                }),
                'available': True,
                'details': None,
                'in_library': None,
                'is_unique': None,
                'item_id': '68461151',
                'provider_domain': 'nicovideo',
                'provider_instance': 'nicovideo_test',
                'url': 'https://www.nicovideo.jp/user/68461151',
              }),
            ]),
            'sort_name': 'ケスト',
            'translation_key': None,
            'uri': 'nicovideo_test://artist/68461151',
            'version': '',
          }),
        ]),
        'date_added': None,
        'disc_number': 0,
        'duration': 2,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': 'sm45285955',
        'last_played': 0,
        'media_type': 'track',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': 'This is a dummy description for testing purposes.',
          'explicit': False,
          'genres': None,
          'grouping': None,
          'images': list([
            dict({
              'path': 'https://img.cdn.nimg.jp/s/nicovideo/thumbnails/45285955/45285955.27227006.original/r640x360l?key=7098d92a9c12d0b14101a4c3c8297e04c6e7a59eb59ffe9e71c88fa0181b0cb5',
              'provider': 'nicovideo_test',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
            dict({
              'path': 'https://nicovideo.cdn.nimg.jp/thumbnails/45285955/45285955.27227006.L',
              'provider': 'nicovideo_test',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
          ]),
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': list([
            dict({
              'type': 'website',
              'url': 'https://www.nicovideo.jp/watch/sm45285955',
            }),
          ]),
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': 0,
          'preview': None,
          'release_date': '2025-01-01T00:00:00+09:00',
          'review': None,
          'style': None,
        }),
        'name': 'APIテスト用',
        'position': None,
        'provider': 'nicovideo_test',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': 'aac',
              'content_type': 'mp4',
              'output_format_str': 'mp4',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': 'sm45285955',
            'provider_domain': 'nicovideo',
            'provider_instance': 'nicovideo_test',
            'url': 'https://www.nicovideo.jp/watch/sm45285955',
          }),
        ]),
        'sort_name': 'apiテスト用',
        'track_number': 0,
        'translation_key': None,
        'uri': 'nicovideo_test://track/sm45285955',
        'version': '',
      }),
    ]),
  })
# ---
# name: test_converter_with_fixture[search/mylist_search.json]
  dict({
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_editable': True,
    'is_playable': True,
    'item_id': '78597499',
    'media_type': 'playlist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/mylist/78597499',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'テストマイリスト68461151-78597499',
    'owner': '68461151',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '78597499',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/mylist/78597499',
      }),
    ]),
    'sort_name': 'テストマイリスト68461151-78597499',
    'translation_key': None,
    'uri': 'nicovideo_test://playlist/78597499',
    'version': '',
  })
# ---
# name: test_converter_with_fixture[search/series_search.json]
  dict({
    'album_type': 'unknown',
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '68461151',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': None,
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': None,
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': 'ゲスト',
        'position': None,
        'provider': 'nicovideo_test',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '68461151',
            'provider_domain': 'nicovideo',
            'provider_instance': 'nicovideo_test',
            'url': 'https://www.nicovideo.jp/user/68461151',
          }),
        ]),
        'sort_name': 'ケスト',
        'translation_key': None,
        'uri': 'nicovideo_test://artist/68461151',
        'version': '',
      }),
    ]),
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '527007',
    'media_type': 'album',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': None,
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/series/527007',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'テストシリーズ68461151-527007',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '527007',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/series/527007',
      }),
    ]),
    'sort_name': 'テストシリース68461151-527007',
    'translation_key': None,
    'uri': 'nicovideo_test://album/527007',
    'version': '',
    'year': None,
  })
# ---
# name: test_converter_with_fixture[search/video_search_keyword.json]
  dict({
    'album': None,
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '68461151',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': list([
            dict({
              'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
              'provider': 'nicovideo_test',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
          ]),
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': list([
            dict({
              'type': 'website',
              'url': 'https://www.nicovideo.jp/user/68461151',
            }),
          ]),
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': 'ゲスト',
        'position': None,
        'provider': 'nicovideo_test',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '68461151',
            'provider_domain': 'nicovideo',
            'provider_instance': 'nicovideo_test',
            'url': 'https://www.nicovideo.jp/user/68461151',
          }),
        ]),
        'sort_name': 'ケスト',
        'translation_key': None,
        'uri': 'nicovideo_test://artist/68461151',
        'version': '',
      }),
    ]),
    'date_added': None,
    'disc_number': 0,
    'duration': 2,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': 'sm45285955',
    'last_played': 0,
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': False,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://img.cdn.nimg.jp/s/nicovideo/thumbnails/45285955/45285955.27227006.original/r640x360l?key=7098d92a9c12d0b14101a4c3c8297e04c6e7a59eb59ffe9e71c88fa0181b0cb5',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
        dict({
          'path': 'https://nicovideo.cdn.nimg.jp/thumbnails/45285955/45285955.27227006.L',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/watch/sm45285955',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': 0,
      'preview': None,
      'release_date': '2025-01-01T00:00:00+09:00',
      'review': None,
      'style': None,
    }),
    'name': 'APIテスト用',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': 'aac',
          'content_type': 'mp4',
          'output_format_str': 'mp4',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': 'sm45285955',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/watch/sm45285955',
      }),
    ]),
    'sort_name': 'apiテスト用',
    'track_number': 0,
    'translation_key': None,
    'uri': 'nicovideo_test://track/sm45285955',
    'version': '',
  })
# ---
# name: test_converter_with_fixture[search/video_search_tags.json]
  dict({
    'album': None,
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '68461151',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': list([
            dict({
              'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
              'provider': 'nicovideo_test',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
          ]),
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': list([
            dict({
              'type': 'website',
              'url': 'https://www.nicovideo.jp/user/68461151',
            }),
          ]),
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': 'ゲスト',
        'position': None,
        'provider': 'nicovideo_test',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '68461151',
            'provider_domain': 'nicovideo',
            'provider_instance': 'nicovideo_test',
            'url': 'https://www.nicovideo.jp/user/68461151',
          }),
        ]),
        'sort_name': 'ケスト',
        'translation_key': None,
        'uri': 'nicovideo_test://artist/68461151',
        'version': '',
      }),
    ]),
    'date_added': None,
    'disc_number': 0,
    'duration': 2,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': 'sm45285955',
    'last_played': 0,
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': False,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://img.cdn.nimg.jp/s/nicovideo/thumbnails/45285955/45285955.27227006.original/r640x360l?key=7098d92a9c12d0b14101a4c3c8297e04c6e7a59eb59ffe9e71c88fa0181b0cb5',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
        dict({
          'path': 'https://nicovideo.cdn.nimg.jp/thumbnails/45285955/45285955.27227006.L',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/watch/sm45285955',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': 0,
      'preview': None,
      'release_date': '2025-01-01T00:00:00+09:00',
      'review': None,
      'style': None,
    }),
    'name': 'APIテスト用',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': 'aac',
          'content_type': 'mp4',
          'output_format_str': 'mp4',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': 'sm45285955',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/watch/sm45285955',
      }),
    ]),
    'sort_name': 'apiテスト用',
    'track_number': 0,
    'translation_key': None,
    'uri': 'nicovideo_test://track/sm45285955',
    'version': '',
  })
# ---
# name: test_converter_with_fixture[stream/stream_data.json]
  dict({
    'audio_format': dict({
      'bit_depth': 16,
      'bit_rate': 236125,
      'channels': 2,
      'codec_type': 'aac',
      'content_type': 'mp4',
      'output_format_str': 'mp4',
      'sample_rate': 48000,
    }),
    'dsp': None,
    'duration': 2,
    'item_id': 'sm45285955',
    'loudness': -7000.0,
    'loudness_album': None,
    'media_type': 'track',
    'prefer_album_loudness': False,
    'provider': 'nicovideo_test',
    'size': None,
    'stream_metadata': dict({
      'album': 'テストシリーズ68461151-527007',
      'artist': 'ゲスト',
      'description': None,
      'duration': None,
      'elapsed_time': None,
      'elapsed_time_last_updated': None,
      'image_url': 'https://nicovideo.cdn.nimg.jp/thumbnails/45285955/45285955.27227006',
      'title': 'APIテスト用',
      'uri': None,
    }),
    'stream_title': 'ゲスト - APIテスト用',
    'stream_type': 'custom',
    'target_loudness': None,
    'volume_normalization_gain_correct': None,
    'volume_normalization_mode': None,
  })
# ---
# name: test_converter_with_fixture[tracks/own_videos.json]
  dict({
    'album': None,
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '68461151',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': list([
            dict({
              'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
              'provider': 'nicovideo_test',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
          ]),
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': list([
            dict({
              'type': 'website',
              'url': 'https://www.nicovideo.jp/user/68461151',
            }),
          ]),
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': 'ゲスト',
        'position': None,
        'provider': 'nicovideo_test',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '68461151',
            'provider_domain': 'nicovideo',
            'provider_instance': 'nicovideo_test',
            'url': 'https://www.nicovideo.jp/user/68461151',
          }),
        ]),
        'sort_name': 'ケスト',
        'translation_key': None,
        'uri': 'nicovideo_test://artist/68461151',
        'version': '',
      }),
    ]),
    'date_added': None,
    'disc_number': 0,
    'duration': 2,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': 'sm45285955',
    'last_played': 0,
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': False,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://img.cdn.nimg.jp/s/nicovideo/thumbnails/45285955/45285955.27227006.original/r640x360l?key=7098d92a9c12d0b14101a4c3c8297e04c6e7a59eb59ffe9e71c88fa0181b0cb5',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
        dict({
          'path': 'https://nicovideo.cdn.nimg.jp/thumbnails/45285955/45285955.27227006.L',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/watch/sm45285955',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': 0,
      'preview': None,
      'release_date': '2025-01-01T00:00:00+09:00',
      'review': None,
      'style': None,
    }),
    'name': 'APIテスト用',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': 'aac',
          'content_type': 'mp4',
          'output_format_str': 'mp4',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': 'sm45285955',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/watch/sm45285955',
      }),
    ]),
    'sort_name': 'apiテスト用',
    'track_number': 0,
    'translation_key': None,
    'uri': 'nicovideo_test://track/sm45285955',
    'version': '',
  })
# ---
# name: test_converter_with_fixture[tracks/user_videos.json]
  dict({
    'album': None,
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '68461151',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': list([
            dict({
              'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
              'provider': 'nicovideo_test',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
          ]),
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': list([
            dict({
              'type': 'website',
              'url': 'https://www.nicovideo.jp/user/68461151',
            }),
          ]),
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': 'ゲスト',
        'position': None,
        'provider': 'nicovideo_test',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '68461151',
            'provider_domain': 'nicovideo',
            'provider_instance': 'nicovideo_test',
            'url': 'https://www.nicovideo.jp/user/68461151',
          }),
        ]),
        'sort_name': 'ケスト',
        'translation_key': None,
        'uri': 'nicovideo_test://artist/68461151',
        'version': '',
      }),
    ]),
    'date_added': None,
    'disc_number': 0,
    'duration': 2,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': 'sm45285955',
    'last_played': 0,
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': False,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://img.cdn.nimg.jp/s/nicovideo/thumbnails/45285955/45285955.27227006.original/r640x360l?key=7098d92a9c12d0b14101a4c3c8297e04c6e7a59eb59ffe9e71c88fa0181b0cb5',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
        dict({
          'path': 'https://nicovideo.cdn.nimg.jp/thumbnails/45285955/45285955.27227006.L',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/watch/sm45285955',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': 0,
      'preview': None,
      'release_date': '2025-01-01T00:00:00+09:00',
      'review': None,
      'style': None,
    }),
    'name': 'APIテスト用',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': 'aac',
          'content_type': 'mp4',
          'output_format_str': 'mp4',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': 'sm45285955',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/watch/sm45285955',
      }),
    ]),
    'sort_name': 'apiテスト用',
    'track_number': 0,
    'translation_key': None,
    'uri': 'nicovideo_test://track/sm45285955',
    'version': '',
  })
# ---
# name: test_converter_with_fixture[tracks/watch_data.json]
  dict({
    'album': dict({
      'album_type': 'unknown',
      'artists': list([
        dict({
          'date_added': None,
          'external_ids': list([
          ]),
          'favorite': False,
          'is_playable': True,
          'item_id': '68461151',
          'media_type': 'artist',
          'metadata': dict({
            'chapters': None,
            'copyright': None,
            'description': None,
            'explicit': None,
            'genres': None,
            'grouping': None,
            'images': list([
              dict({
                'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
                'provider': 'nicovideo_test',
                'remotely_accessible': True,
                'type': 'thumb',
              }),
            ]),
            'label': None,
            'languages': None,
            'last_refresh': None,
            'links': list([
              dict({
                'type': 'website',
                'url': 'https://www.nicovideo.jp/user/68461151',
              }),
            ]),
            'lrc_lyrics': None,
            'lyrics': None,
            'mood': None,
            'performers': None,
            'popularity': None,
            'preview': None,
            'release_date': None,
            'review': None,
            'style': None,
          }),
          'name': 'ゲスト',
          'position': None,
          'provider': 'nicovideo_test',
          'provider_mappings': list([
            dict({
              'audio_format': dict({
                'bit_depth': 16,
                'bit_rate': 0,
                'channels': 2,
                'codec_type': '?',
                'content_type': '?',
                'output_format_str': '?',
                'sample_rate': 44100,
              }),
              'available': True,
              'details': None,
              'in_library': None,
              'is_unique': None,
              'item_id': '68461151',
              'provider_domain': 'nicovideo',
              'provider_instance': 'nicovideo_test',
              'url': 'https://www.nicovideo.jp/user/68461151',
            }),
          ]),
          'sort_name': 'ケスト',
          'translation_key': None,
          'uri': 'nicovideo_test://artist/68461151',
          'version': '',
        }),
      ]),
      'date_added': None,
      'external_ids': list([
      ]),
      'favorite': False,
      'is_playable': True,
      'item_id': '527007',
      'media_type': 'album',
      'metadata': dict({
        'chapters': None,
        'copyright': None,
        'description': 'This is a dummy description for testing purposes.',
        'explicit': None,
        'genres': None,
        'grouping': None,
        'images': None,
        'label': None,
        'languages': None,
        'last_refresh': None,
        'links': list([
          dict({
            'type': 'website',
            'url': 'https://www.nicovideo.jp/series/527007',
          }),
        ]),
        'lrc_lyrics': None,
        'lyrics': None,
        'mood': None,
        'performers': None,
        'popularity': None,
        'preview': None,
        'release_date': None,
        'review': None,
        'style': None,
      }),
      'name': 'テストシリーズ68461151-527007',
      'position': None,
      'provider': 'nicovideo_test',
      'provider_mappings': list([
        dict({
          'audio_format': dict({
            'bit_depth': 16,
            'bit_rate': 0,
            'channels': 2,
            'codec_type': '?',
            'content_type': '?',
            'output_format_str': '?',
            'sample_rate': 44100,
          }),
          'available': True,
          'details': None,
          'in_library': None,
          'is_unique': None,
          'item_id': '527007',
          'provider_domain': 'nicovideo',
          'provider_instance': 'nicovideo_test',
          'url': 'https://www.nicovideo.jp/series/527007',
        }),
      ]),
      'sort_name': 'テストシリース68461151-527007',
      'translation_key': None,
      'uri': 'nicovideo_test://album/527007',
      'version': '',
      'year': None,
    }),
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '68461151',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': list([
            dict({
              'path': 'https://secure-dcdn.cdn.nimg.jp/nicoaccount/usericon/defaults/blank.jpg',
              'provider': 'nicovideo_test',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
          ]),
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': list([
            dict({
              'type': 'website',
              'url': 'https://www.nicovideo.jp/user/68461151',
            }),
          ]),
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': 'ゲスト',
        'position': None,
        'provider': 'nicovideo_test',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '68461151',
            'provider_domain': 'nicovideo',
            'provider_instance': 'nicovideo_test',
            'url': 'https://www.nicovideo.jp/user/68461151',
          }),
        ]),
        'sort_name': 'ケスト',
        'translation_key': None,
        'uri': 'nicovideo_test://artist/68461151',
        'version': '',
      }),
    ]),
    'date_added': None,
    'disc_number': 0,
    'duration': 2,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': 'sm45285955',
    'last_played': 0,
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'This is a dummy description for testing purposes.',
      'explicit': None,
      'genres': list([
        'APIテストタグ68461151-45285955',
        'テスト',
        'テスト動画',
      ]),
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://nicovideo.cdn.nimg.jp/thumbnails/45285955/45285955.27227006',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
        dict({
          'path': 'https://nicovideo.cdn.nimg.jp/thumbnails/45285955/45285955.27227006.L',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
        dict({
          'path': 'https://nicovideo.cdn.nimg.jp/thumbnails/45285955/45285955.27227006.M',
          'provider': 'nicovideo_test',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': list([
        dict({
          'type': 'website',
          'url': 'https://www.nicovideo.jp/watch/sm45285955',
        }),
      ]),
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': 0,
      'preview': None,
      'release_date': '2025-01-01T00:00:00+09:00',
      'review': None,
      'style': None,
    }),
    'name': 'APIテスト用',
    'position': None,
    'provider': 'nicovideo_test',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 236125,
          'channels': 2,
          'codec_type': 'aac',
          'content_type': 'mp4',
          'output_format_str': 'mp4',
          'sample_rate': 48000,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': 'sm45285955',
        'provider_domain': 'nicovideo',
        'provider_instance': 'nicovideo_test',
        'url': 'https://www.nicovideo.jp/watch/sm45285955',
      }),
    ]),
    'sort_name': 'apiテスト用',
    'track_number': 0,
    'translation_key': None,
    'uri': 'nicovideo_test://track/sm45285955',
    'version': '',
  })
# ---
